<resources>
    <string name="app_name">全影</string>
    <string name="nav_title1">首页</string>
    <string name="nav_title2">人才网</string>
    <string name="nav_title3">展厅</string>
    <string name="nav_title4">请柬</string>
    <string name="nav_title5">我的</string>

    <string name="share_qq">QQ</string>
    <string name="share_qzon">QQ空间</string>
    <string name="share_wechat">微信</string>
    <string name="share_wxcircle">朋友圈</string>
    <string name="share_title">分享到：</string>


    <!-- 首页 -> 个人中心界面 -->
    <string name="nav_title5_item1">主页</string>
    <string name="nav_title5_item2">我的收藏</string>
    <string name="nav_title5_item3">我的关注</string>
    <string name="nav_title5_item4">我的粉丝</string>
    <string name="nav_title5_item5">会员中心</string>
    <string name="nav_title5_item6">设置</string>
    <string name="search_hint">搜索用户/公司/手机号</string>
    <string name="search_hottitle">热门搜索</string>
    <string name="search_cancel">取消</string>
    <string name="perfect_user">编辑资料</string>
    <string name="perfect_head">头像</string>
    <string name="perfect_name">姓名</string>
    <string name="perfect_sex">性别</string>
    <string name="perfect_sex_b">男</string>
    <string name="perfect_sex_w">女</string>
    <string name="perfect_birthady">生日</string>
    <string name="perfect_address">地区</string>
    <string name="perfect_sign">签名</string>
    <string name="perfect_tag">标签</string>
    <string name="perfect_check">确认修改</string>
    <string name="edit_diss">取消</string>
    <string name="edit_finish">确定</string>
    <string name="edit_hint">请输入..</string>
    <string name="userpage_fans">粉丝</string>

    <!-- 设置界面 -->
    <string name="setting_title">设置</string>
    <string name="setting_item1">账户与安全</string>
    <string name="setting_item2">消息通知</string>
    <string name="setting_item3">清除缓存</string>
    <string name="setting_item4">关于我们</string>
    <string name="setting_outuser">退出登录</string>


    <!-- 登录界面 -->
    <string name="login_username">账号</string>
    <string name="hintusername">用户名/手机号/邮箱</string>
    <string name="hintpassword">请设置密码</string>
    <string name="login_password">密码</string>
    <string name="login_forgetpassword">忘记密码</string>
    <string name="login_regist">账号注册</string>
    <string name="login_button">登录</string>
    <string name="regist_personage">个人账号注册</string>
    <string name="regist_company">企业账号注册</string>

    <!-- 忘记密码 -->
    <string name="forget_tel">手机号</string>
    <string name="forget_newp">新密码</string>
    <string name="forget_code">请输入验证码</string>
    <string name="forget_getcode">发送验证码</string>
    <string name="forget_finish">完成</string>
    <string name="forget_prompt">手机号不可用？通过邮箱找回密码</string>
    <string name="forget_foremails">邮箱找回密码</string>
    <string name="forget_e_username">请输入账户名</string>
    <string name="forget_e_email">注册时的邮箱</string>
    <string name="forget_e_finish">提交</string>

    <!-- 账号注册 -->
    <string name="regist_title">账号注册</string>
    <string name="regist_tel">手机号</string>
    <string name="regist_code">验证码</string>
    <string name="regist_getcode">点击获取</string>
    <string name="regist_password">密码</string>
    <string name="regist_finish">注册</string>
    <string name="regist_instrucitons">使用条款和隐私政策</string>

    <!-- 展厅 -->
    <string name="showroom_nav1">最新</string>
    <string name="showroom_nav2">关注</string>
    <string name="showroom_nav3">同城</string>
    <string name="showroom_details">个人作品详情</string>
    <string name="showroom_send">发送</string>
    <string name="showroom_hint">添加评论</string>
    <string name="showroom_push">发布</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- 手机绑定 -->
    <string name="bindphone_title">手机绑定</string>
    <string name="bindphone_inputnub">请输入新手机号</string>
    <string name="bindphone_inputverification_code">请输入验证码</string>
    <string name="bindphone_getverification_code">获取验证码</string>
    <string name="bindphone_affirm">确认绑定</string>
    <string name="changepassword_nub">全影号</string>
    <string name="changepassword_changephone">更换绑定手机号</string>
    <string name="changepassword_newpwd">新密码</string>
    <string name="changepassword_againpwd">确认密码</string>
    <string name="changepassword_finish">确认修改</string>
    <string name="bindphonetext">绑定手机号</string>


</resources>
