<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bkg"
    tools:context=".ui.user.PerfectUserMsgActivity">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        xmlns:titlebar="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:titleBarColor="@color/colorBackground"
        titlebar:statusBarColor="@color/colorBackground"
        titlebar:centerText="@string/perfect_user"
        titlebar:centerTextColor="@color/white"
        titlebar:centerType="textView"
        titlebar:leftDrawable="@mipmap/back"
        titlebar:leftDrawablePadding="0dp"
        titlebar:leftType="textView"
        titlebar:showBottomLine="false"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        >
        <TextView
        style="@style/text_style"
            android:text="@string/perfect_head"
            android:layout_weight="1"

        />
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/userhead"
        android:layout_width="45dp"
        android:layout_height="45dp"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/jinru"
            android:layout_marginLeft="16dp"
            />
    </LinearLayout>

    <View
        style="@style/horizontal_divider_light"
        />
        <LinearLayout
            android:id="@+id/jump_editname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"

            >
            <TextView
                style="@style/text_style"
                android:text="@string/perfect_name"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/edit_name"
                style="@style/text_style"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jinru"
                android:layout_marginLeft="16dp"
                />
        </LinearLayout>
        <View
        style="@style/horizontal_divider_light"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"
            >
            <TextView
                style="@style/text_style"
                android:text="@string/perfect_sex"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/round_girl"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/round_c"
                android:paddingLeft="11dp"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                />
            <TextView
                style="@style/text_style"
                android:text="@string/perfect_sex_w"
                />
            <ImageView
                android:id="@+id/round_boy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/round"
                android:paddingLeft="11dp"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                />
            <TextView
                style="@style/text_style"
                android:text="@string/perfect_sex_b"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jinru"
                android:layout_marginLeft="16dp"
                android:visibility="invisible"
                />
        </LinearLayout> <View
        style="@style/horizontal_divider_light"
        />
        <LinearLayout
            android:id="@+id/select_birthady"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"
            >
            <TextView
                style="@style/text_style"
                android:text="@string/perfect_birthady"
                android:layout_weight="1"
                />
            <TextView
                style="@style/text_style"
                android:id="@+id/select_btext"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jinru"
                android:layout_marginLeft="16dp"
                />
        </LinearLayout> <View
        style="@style/horizontal_divider_light"
        />
        <LinearLayout
            android:id="@+id/address_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"
            >
            <TextView
                style="@style/text_style"
                android:text="@string/perfect_address"
                android:layout_weight="1"
                />
            <TextView
                style="@style/text_style"
                android:id="@+id/address_text"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jinru"
                android:layout_marginLeft="16dp"
                />
        </LinearLayout> <View
        style="@style/horizontal_divider_light"
        />
        <LinearLayout
            android:id="@+id/jump_editsign"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"
            >
            <TextView
                style="@style/text_style"
                android:text="@string/perfect_sign"
                android:minWidth="100dp"
                />
            <TextView
                android:id="@+id/edit_sign"
                style="@style/text_style"
                android:text=""
                android:layout_weight="1"
                android:gravity="right"
                android:singleLine="true"
                android:lines="1"
                android:maxLines="1"
                android:enabled="true"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jinru"
                android:layout_marginLeft="16dp"
                />
        </LinearLayout> <View
        style="@style/horizontal_divider_light"
        />
        <LinearLayout
            android:id="@+id/tag_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"
            >
            <TextView
                style="@style/text_style"
                android:text="@string/perfect_tag"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tag_name"
                style="@style/text_style"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jinru"
                android:layout_marginLeft="16dp"
                />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/check_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@drawable/textdefcheck"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/perfect_check"

        />

</LinearLayout>