<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <com.quanying.app.view.CustomViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
       android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        ></com.quanying.app.view.CustomViewPager>

    <com.chaychan.library.BottomBarLayout
        android:id="@+id/bbl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/tab_gb"
        android:layout_alignParentBottom="true"
        app:smoothScroll="false"
        >

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/home_normal"
            app:iconSelected="@mipmap/home_select"
            app:itemText="@string/nav_title1"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorBackground"
            app:itemTextSize="10sp"
            app:itemMarginTop="2dp"
            app:openTouchBg="true"
            app:touchDrawable="@drawable/selector_bg"
            />

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/rencai_normal"
            app:iconSelected="@mipmap/rencai_select"
            app:itemText="@string/nav_title2"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorBackground"
            app:itemTextSize="10sp"
            app:itemMarginTop="2dp"
            app:openTouchBg="true"
            app:unreadThreshold="999"
            app:touchDrawable="@drawable/selector_bg"
            />

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/find_normal"
            app:iconSelected="@mipmap/find_select"
            app:itemText="@string/nav_title3"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorBackground"
            app:itemTextSize="10sp"
            app:itemMarginTop="2dp"
            app:openTouchBg="true"
            app:unreadThreshold="999"
            app:touchDrawable="@drawable/selector_bg"
            />


        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/msg_normal"
            app:iconSelected="@mipmap/msg_select"
            app:itemText="@string/nav_title4"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorBackground"
            app:itemTextSize="10sp"
            app:itemMarginTop="2dp"
            app:openTouchBg="true"
            app:touchDrawable="@drawable/selector_bg"
            />

        <com.chaychan.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:iconNormal="@mipmap/user_normal"
            app:iconSelected="@mipmap/user_select"
            app:itemText="@string/nav_title5"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/colorBackground"
            app:itemTextSize="10sp"
            app:itemMarginTop="2dp"
            app:openTouchBg="true"
            app:touchDrawable="@drawable/selector_bg"
            />

    </com.chaychan.library.BottomBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/tab_normal_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        />
</RelativeLayout>
