<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.user.ForgetPasswordActivity">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        xmlns:titlebar="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:titleBarColor="@color/white"
        titlebar:statusBarColor="@color/white"
        titlebar:centerText="@string/login_forgetpassword"
        titlebar:centerTextColor="@color/black_dft"
        titlebar:centerType="textView"
        titlebar:showBottomLine="false"
        titlebar:leftDrawable="@mipmap/blueback"
        titlebar:leftDrawablePadding="0dp"
        titlebar:leftType="textView"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="+86"
            android:textColor="@color/textdefcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/forget_tel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:hint="@string/forget_tel"
            android:textColor="@color/textdefcolor"
            android:textColorHint="@color/dividing_light"
            android:textCursorDrawable="@drawable/bluecursor"
            android:singleLine="true"
            android:inputType="phone"
            android:lines="1"
            android:textSize="14sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="12dp"
        android:background="@color/dividing_light" />
  <LinearLayout
      android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"

        android:orientation="horizontal">

      <EditText
            android:id="@+id/forget_code"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:hint="@string/forget_code"
            android:textColor="@color/textdefcolor"
            android:textColorHint="@color/dividing_light"
          android:textCursorDrawable="@drawable/bluecursor"
            android:singleLine="true"
          android:inputType="number"
            android:lines="1"
            android:textSize="14sp" />

      <LinearLayout
          android:id="@+id/getcode_btn"
          android:layout_width="65dp"
          android:layout_height="27dp"
          android:layout_gravity="center_vertical"
          android:background="@drawable/getcode_bg"
          android:gravity="center">

          <TextView
              android:id="@+id/forget_password_getcodetext"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/forget_getcode"
              android:textColor="@color/white"
              android:textSize="12sp" />

      </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="12dp"
        android:background="@color/dividing_light" />
  <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
      android:layout_marginTop="12dp"
        android:orientation="horizontal">

      <EditText
            android:id="@+id/forget_newpass"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:hint="@string/forget_newp"
            android:textColor="@color/textdefcolor"
            android:textColorHint="@color/dividing_light"
          android:textCursorDrawable="@drawable/bluecursor"
            android:inputType="textPassword"
            android:singleLine="true"
            android:lines="1"
            android:textSize="14sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="12dp"
        android:background="@color/dividing_light" />

    <LinearLayout
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/loginbtn_gray_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_finish"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/foremail_btn"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/forget_prompt"
        android:textColor="@drawable/textbluecheck"
        android:textSize="12sp" />

</LinearLayout>